--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,13 +26,13 @@ jobs:
         with:
          dotnet-version: ${{ env.DOTNET_VERSION }}
           - name: Install dependencies
-      run: dotnet restore
-    - name: Build
-      run: |
+      - run: dotnet restore
+      - name: Build
+      - run: |
         cd DotNet.WebApp
         dotnet build --configuration Release --no-restore
         dotnet publish -c Release -o ../dotnet-webapp -r linux-x64 --self-contained true /p:UseAppHost=true
-    - name: Test
-      run: |
+      - name: Test
+        run: |
         cd DotNet.WebApp.Tests
         dotnet test --no-restore --verbosity normal
