--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
       - run: dotnet restore
       - name: Build
-      - run: |
+        run: |
           cd DotNet.WebApp
           dotnet build --configuration Release --no-restore
           dotnet publish -c Release -o ../dotnet-webapp -r linux-x64 --self-contained true /p:UseAppHost=true
