--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,7 @@ jobs:
         
       - name: Build
         run: |
-          cd net-app-web
+          cd dotnet
           dotnet build --configuration Release --no-restore
           dotnet publish -c Release -o ../dotnet-webapp -r linux-x64 --self-contained true /p:UseAppHost=true
           
