--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,9 +31,8 @@ jobs:
       - name: Build
         run: |
           dotnet build --configuration Release --no-restore
-          dotnet publish -c Release -r linux-x64 --self-contained true /p:UseAppHost=true
+          dotnet publish -c Release -o . -r linux-x64 --self-contained true /p:UseAppHost=true
           
       - name: Test
         run: |
-          cd DotNet.WebApp.Tests
-          dotnet test --no-restore --verbosity normal
+         dotnet test --no-restore --verbosity normal
