--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,13 @@ jobs:
         run: |
           dotnet build --configuration Release --no-restore
           dotnet publish -c Release -o . -r linux-x64 --self-contained true /p:UseAppHost=true
-          
-      - name: Test
-        run: |
-         dotnet test --no-restore --verbosity normal
+      
+      - name: Upload to S3 
+        uses: jakejarvis/s3-sync-action@master
+         with:
+          args: --acl public-read --follow-symlinks --exclude '*' --include /bin/Release/net8.0/linux-x64/WebApplication1.dll
+        env:
+         AWS_S3_BUCKET: bt-course-bucket-4
+         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+         AWS_REGION: ap-southeast-2
