--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,44 +1,45 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
-env:
-  WEBAPP_NAME: DotNetWeb
-  AZURE_WEBAPP_PACKAGE_PATH: '.' # Set this to the path to your web app project, defaults to the repository root:
-  DOTNET_VERSION: '6.0.401' # The .NET SDK version to use
-  
+name: Build and Upload to S3
+
+on:
+  push:
+    branches: [ main ]
+
 jobs:
-  Explore-GitHub-Actions:
+  build:
+    name: Build the app
     runs-on: ubuntu-latest
+
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v3
-        with:
-         dotnet-version: ${{ env.DOTNET_VERSION }}
-      - name: Install dependencies
-        run: dotnet restore
-        
-      - name: Build
-        run: |
-          dotnet build --configuration Release --no-restore
-          dotnet publish -c Release -o . -r linux-x64 --self-contained true /p:UseAppHost=true
-      
-      - name: Upload to S3 
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --exclude '*' --include /bin/Release/net8.0/linux-x64/WebApplication1.dll
-        env:
-         AWS_S3_BUCKET: bt-course-bucket-4
-         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-         AWS_REGION: ap-southeast-2
+    - name: Checkout source code
+      uses: actions/checkout@v2
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.x
+
+    - name: Restore dependencies
+      run: dotnet restore
+
+    - name: Build
+      run: dotnet build -c release --no-restore
+
+    - name: Install zip
+      uses: montudor/action-zip@v1
+
+    - name: Zip output
+      run: zip -qq -r helloworld.zip bin/release/net5.0
+
+    # Not needed, but very handy when trying to figure out what the action is doing
+    #- name: Local file stuff
+    #  run: pwd; ls -al; find .
+    
+    - name: Upload to S3 
+      uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --follow-symlinks --exclude '*' --include 'helloworld.zip' 
+      env:
+        AWS_S3_BUCKET: bt-course-bucket-4
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ap-southeast-2
