--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,7 @@ jobs:
       uses: montudor/action-zip@v1
 
     - name: Zip output
-      run: zip -qq -r helloworld.zip bin/release/net8.0
+      run: zip -qq -r helloworld.zip bin/Release/net8.0
 
     # Not needed, but very handy when trying to figure out what the action is doing
     #- name: Local file stuff
