--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,6 +17,9 @@ phases:
     commands:
       - echo Building the project...
       - dotnet build --configuration Release
+      - echo publish the project...
+      - dotnet publish -c Release -o ./publish
+      
 
   post_build:
     commands:
@@ -25,5 +28,6 @@ phases:
 
 artifacts:
   files:
-    - '**/bin/Release/net8.0/publish/**/*'
+    - '**/*'
   discard-paths: yes  
+  base-directory: './publish'
